# x0-supervision

./: README.md
ControlNet/: README.md  annotate_ade20k_for_t2i.py  annotate_imagenet_for_t2i.py  generate_canny_eval_samples.py  generate_depth_eval_samples.py  generate_normal_eval_samples.py  generate_pose_eval_samples.py  generate_seg_eval_samples.py  prepare_coco_keypoints.py  pyproject.toml  tool_add_control.py  train_controlnet.py  train_controlnet_with_periodic_eval.py
ControlNet/cldm/: cldm.py  model.py
ControlNet/cocoapi/PythonAPI/pycocotools/: coco.py
ControlNet/configs/controlnet/: cldm_v15_canny.yaml  cldm_v15_canny_inv_snr.yaml  cldm_v15_canny_v.yaml  cldm_v15_canny_x0.yaml  cldm_v15_depth.yaml  cldm_v15_depth_inv_snr.yaml  cldm_v15_depth_v.yaml  cldm_v15_depth_x0.yaml  cldm_v15_pose.yaml  cldm_v15_pose_inv_snr.yaml  cldm_v15_pose_v.yaml  cldm_v15_pose_x0.yaml  cldm_v15_seg.yaml  cldm_v15_seg_inv_snr.yaml  cldm_v15_seg_v.yaml  cldm_v15_seg_x0.yaml
ControlNet/configs/latent-diffusion/: ldm_kl_4.yaml
ControlNet/ldm/modules/diffusionmodules/: openaimodel.py
ControlNet/models/: cldm_eps2x0_v15.yaml
ControlNet/utils/: control_datasets.py  control_evaluators.py  eval_callback.py  logger.py  share.py  utils.py
OminiControl/: README.md  generate_canny_eval_samples.py  generate_depth_eval_samples.py  generate_pose_eval_samples.py  generate_seg_eval_samples.py  get_pose_eval_controls.py  pyproject.toml  recompute_pose_performance_curves.py
OminiControl/annotator/hed/: __init__.py
OminiControl/annotator/midas/: __init__.py
OminiControl/cocoapi/PythonAPI/pycocotools/: cocoeval.py
OminiControl/omini/pipeline/: control_evaluators.py  datasets.py  eval_callback.py  flux_omini.py  utils.py
OminiControl/omini/train_flux/: train_spatial_alignment.py  train_spatial_alignment_v2.py  train_spatial_alignment_v2_x0.py  train_spatial_alignment_v2_x1.py  trainer_v2.py  trainer_v2_x0.py  trainer_v2_x1.py
OminiControl/train/config/: spatial_alignment.yaml  spatial_alignment_canny.yaml  spatial_alignment_canny_x0.yaml  spatial_alignment_canny_x1.yaml  spatial_alignment_depth.yaml  spatial_alignment_depth_x0.yaml  spatial_alignment_depth_x1.yaml  spatial_alignment_pose.yaml  spatial_alignment_pose_x0.yaml  spatial_alignment_pose_x1.yaml  spatial_alignment_seg.yaml  spatial_alignment_seg_x0.yaml  spatial_alignment_seg_x1.yaml
T2I-Adapter/: README.md  generate_canny_eval_samples.py  generate_depth_eval_samples.py  generate_pose_eval_samples.py  generate_seg_eval_samples.py  pyproject.toml  train_canny.py  train_depth.py  train_pose.py  train_seg.py
T2I-Adapter/annotator/midas/: __init__.py
T2I-Adapter/configs/stable-diffusion/: train_canny_eps.yaml  train_canny_v.yaml  train_canny_x0.yaml  train_depth_eps.yaml  train_depth_v.yaml  train_depth_x0.yaml  train_mask_eps.yaml  train_mask_v.yaml  train_mask_x0.yaml  train_pose_eps.yaml  train_pose_v.yaml  train_pose_x0.yaml
T2I-Adapter/data/: ade20k_val_caption.csv
T2I-Adapter/ldm/data/: dataset_ade20k.py  dataset_canny.py  dataset_depth.py  dataset_pose.py
T2I-Adapter/ldm/models/diffusion/: ddpm.py
T2I-Adapter/utils/: canny_evaluator.py  depth_evaluator.py  pose_evaluator.py  segmentation_evaluator.py
