[project]
name = "controlnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "absl-py==2.3.1",
    "addict==2.4.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.10.11",
    "aiosignal==1.3.1",
    "albumentations==1.3.0",
    "altair==5.4.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.8",
    "anyio==4.5.2",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "babel==2.17.0",
    "backcall==0.2.0",
    "basicsr==1.4.2",
    "bleach==6.1.0",
    "blinker==1.8.2",
    "braceexpand==0.1.7",
    "cachetools==5.5.2",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "comm==0.2.3",
    "contourpy==1.1.1",
    "cycler==0.12.1",
    "datasets==3.1.0",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dill==0.3.8",
    "einops==0.3.0",
    "exceptiongroup==1.3.0",
    "executing==2.2.1",
    "fastapi==0.116.1",
    "fastjsonschema==2.21.2",
    "ffmpy==0.5.0",
    "filelock==3.16.1",
    "fonttools==4.57.0",
    "fqdn==1.5.1",
    "frozenlist==1.5.0",
    "fsspec==2024.9.0",
    "ftfy==6.2.3",
    "future==1.0.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.0.0",
    "gradio==3.16.2",
    "grpcio==1.70.0",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.34.2",
    "idna==3.10",
    "imageio==2.9.0",
    "imageio-ffmpeg==0.4.2",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.4.5",
    "invisible-watermark==0.2.0",
    "ipykernel==6.29.5",
    "ipython==8.12.3",
    "ipywidgets==8.1.7",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "kiwisolver==1.4.7",
    "kornia==0.6.0",
    "lazy-loader==0.4",
    "lightning-utilities==0.11.9",
    "linkify-it-py==2.0.3",
    "lmdb==1.7.3",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.7.5",
    "matplotlib-inline==0.1.7",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "mistune==3.1.4",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "narwhals==1.42.1",
    "nbclient==0.10.1",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.1",
    "oauthlib==3.3.1",
    "omegaconf==2.1.1",
    "open-clip-torch==2.0.2",
    "opencv-python-headless<4.10.0",
    "orjson==3.10.15",
    "overrides==7.7.0",
    "pandas==2.0.3",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==10.4.0",
    "pkgutil-resolve-name==1.3.10",
    "platformdirs==4.3.6",
    "polars==1.8.2",
    "prettytable==3.6.0",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.2.0",
    "protobuf==3.20.3",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==17.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycocotools==2.0.7",
    "pycparser==2.23",
    "pycryptodome==3.23.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydeck==0.9.1",
    "pydeprecate==0.3.1",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pympler==1.1",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "pytorch-lightning==1.5.0",
    "pytz==2025.2",
    "pywavelets==1.4.1",
    "pyyaml==6.0.2",
    "pyzmq==27.1.0",
    "qudida==0.0.4",
    "referencing==0.35.1",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==14.1.0",
    "rpds-py==0.20.1",
    "rsa==4.9.1",
    "safetensors==0.5.3",
    "scikit-image==0.20.0",
    "scikit-learn==1.3.2",
    "scipy==1.9.1",
    "semver==3.0.4",
    "send2trash==1.8.3",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "starlette==0.44.0",
    "streamlit==1.12.1",
    "streamlit-drawable-canvas==0.8.0",
    "sympy==1.13.3",
    "tb-nightly==2.14.0a20230808",
    "tensorboard==2.14.0",
    "terminado==0.18.1",
    "test-tube==0.7.5",
    "threadpoolctl==3.5.0",
    "tifffile==2023.7.10",
    "timm==0.6.12",
    "tinycss2==1.2.1",
    "tokenizers==0.20.3",
    "toml==0.10.2",
    "tomli==2.2.1",
    "torch==2.4.1",
    "torch-fidelity==0.3.0",
    "torchmetrics==1.5.2",
    "torchvision==0.19.1",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.46.3",
    "triton==3.0.0",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "tzlocal==5.2",
    "uc-micro-py==1.0.3",
    "ultralytics==8.3.208",
    "ultralytics-thop==2.0.17",
    "uri-template==1.3.0",
    "urllib3==2.2.3",
    "uvicorn==0.33.0",
    "validators==0.34.0",
    "watchdog==4.0.2",
    "wcwidth==0.2.13",
    "webcolors==24.8.0",
    "webdataset==0.2.5",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==13.1",
    "werkzeug==3.0.6",
    "widgetsnbextension==4.0.14",
    "xxhash==3.5.0",
    "yapf==0.32.0",
    "yarl==1.15.2",
    "zipp==3.20.2",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
