[project]
name = "t2i-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "accelerate==1.0.1",
    "addict==2.4.0",
    "aiofiles==23.2.1",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.10.11",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.5.2",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "basicsr==1.4.2",
    "braceexpand==0.1.7",
    "cachetools==5.5.2",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "clean-fid==0.1.35",
    "click==8.1.8",
    "clip-anytorch==2.6.0",
    "coloredlogs==15.0.1",
    "contourpy==1.1.1",
    "cycler==0.12.1",
    "datasets==3.1.0",
    "dctorch==0.1.2",
    "diffusers==0.11.1",
    "dill==0.3.8",
    "einops==0.6.0",
    "eval-type-backport==0.2.2",
    "exceptiongroup==1.3.0",
    "fastapi==0.119.1",
    "ffmpy==0.5.0",
    "filelock==3.16.1",
    "flatbuffers==25.9.23",
    "fonttools==4.57.0",
    "frozenlist==1.5.0",
    "fsspec==2024.9.0",
    "ftfy==6.2.3",
    "future==1.0.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-auth==2.41.1",
    "google-auth-oauthlib==1.0.0",
    "gradio==4.44.1",
    "gradio-client==1.3.0",
    "grpcio==1.70.0",
    "h11==0.16.0",
    "hf-xet==1.1.10",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.3",
    "humanfriendly==10.0",
    "idna==3.11",
    "imageio==2.35.1",
    "imageio-ffmpeg==0.5.1",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.4.5",
    "invisible-watermark==0.1.5",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonmerge==1.9.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "k-diffusion==0.1.1.post1",
    "kiwisolver==1.4.7",
    "kornia==0.7.3",
    "kornia-rs==0.1.9",
    "lazy-loader==0.4",
    "lightning-utilities==0.11.9",
    "lmdb==1.7.5",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.7.5",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "networkx==3.1",
    "numpy==1.24.4",
    "oauthlib==3.3.1",
    "omegaconf==2.3.0",
    "onnxruntime<1.24.0",
    "open-clip-torch==2.32.0",
    "opencv-python-headless<4.10.0",
    "orjson==3.10.15",
    "pandas==2.0.3",
    "parso==0.8.5",
    "pillow==10.4.0",
    "pkgutil-resolve-name==1.3.10",
    "platformdirs==4.3.6",
    "polars==1.8.2",
    "propcache==0.2.0",
    "protobuf==5.29.5",
    "psutil==7.1.1",
    "pudb==2025.1.3",
    "pyarrow==17.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycocotools==2.0.7",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydeprecate==0.3.1",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytorch-lightning==1.5.9",
    "pytz==2025.2",
    "pywavelets==1.4.1",
    "pyyaml==6.0.3",
    "referencing==0.35.1",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "rich==14.2.0",
    "rpds-py==0.20.1",
    "rsa==4.9.1",
    "ruff==0.14.1",
    "safetensors==0.5.3",
    "scikit-image==0.21.0",
    "scipy==1.10.1",
    "semantic-version==2.10.0",
    "sentry-sdk==2.42.1",
    "setuptools==59.5.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "starlette==0.44.0",
    "sympy==1.13.3",
    "tb-nightly==2.14.0a20230808",
    "tensorboard==2.14.0",
    "tensorboard-data-server==0.7.2",
    "tifffile==2023.7.10",
    "timm==1.0.20",
    "tokenizers==0.20.3",
    "tomli==2.3.0",
    "tomlkit==0.12.0",
    "torch==2.4.1",
    "torch-fidelity==0.3.0",
    "torchdiffeq==0.2.5",
    "torchmetrics==0.6.0",
    "torchsde==0.2.6",
    "torchvision==0.19.1",
    "tqdm==4.67.1",
    "trampoline==0.1.2",
    "transformers==4.46.3",
    "triton==3.0.0",
    "typer==0.20.0",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "ultralytics==8.3.221",
    "ultralytics-thop==2.0.17",
    "urllib3==2.2.3",
    "urwid==2.6.16",
    "urwid-readline==0.15.1",
    "uvicorn==0.33.0",
    "wandb==0.22.2",
    "wcwidth==0.2.14",
    "webdataset==0.2.100",
    "websockets==12.0",
    "werkzeug==3.0.6",
    "xxhash==3.6.0",
    "yapf==0.43.0",
    "yarl==1.15.2",
    "zipp==3.20.2",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
